--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,10 @@ html {
 }
 
 body {
-  font-weight: 400;
-  overflow-x: hidden;
-  position: relative;
-  background-color: #121212 !important;
-  color: #fff !important;
-  font-family: 'Centra', sans-serif !important;
+  background-image: url('./assets/img/banner-bg.png');
+  background-size: cover; /* Ensures the image covers the entire background */
+  background-position: center center; /* Centers the image */
+  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
