fixing white --> black bg + stacked elements

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,15 @@ body {
   background-attachment: fixed;
 }
 
+/************ Centered Banner ************/
+.centered-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Ensure it takes the full viewport height */
+  text-align: center;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
