--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,11 +1,37 @@
-.projects-container {
+.projects {
+    padding: 80px 0;
+    background-color: #121212; /* Dark background */
+    color: #fff; /* White text */
+  }
+  
+  .projects h2 {
+    font-size: 45px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
+  .projects ul {
+    list-style-type: none;
+    padding: 0;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .projects li {
+    background-color: #1e1e1e; /* Slightly lighter background for each item */
     padding: 20px;
-    background-color: #e9ecef;
-}
-
-.project-item {
-    border: 1px solid #dee2e6;
-    margin: 10px;
-    padding: 15px;
-    border-radius: 5px;
-}
+    margin: 15px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .projects li:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  }
+  
+  .projects strong {
+    color: #AA367C; /* Highlight color */
+  }
